--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <h2>Car list</h2>
+    <div class="container">
+        <h2>Car list</h2>
     <form name="carForm">
         <input type="hidden" name="id" value="0" />
         <div class="form-group">
@@ -40,6 +41,7 @@
         <tbody>
         </tbody>
     </table>
+    </div>
    
     <script>
         async function GetCars() {
