fixed model display

--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
             tr.append(companyTd);
 
             const modelTd = document.createElement("td");
-            modelTd.append(car.company);
+            modelTd.append(car.model);
             tr.append(modelTd);
   
             const powerTd = document.createElement("td");
